Revert "cmake: verbose autogen rules"
This reverts commit 2f88a603001a32b596389b8b031489960e30a9e9.

Sadly, this makes bhlc trip due to a bug in cmake where some internal
compilation jobs now become visible but are run without the relevant
CXXFLAGS.  We await the fix of https://bugs.debian.org/959493 before
we can re-enable it.

--- a/debian/changelog
+++ b/debian/changelog
@@ -50,6 +50,10 @@ debhelper (13.0.1) UNRELEASED; urgency=medium
     complications when they are made unconditional by a makefile
     target and suggest alternatives.  Thanks to Marcin Owsiany for
     reporting this.  (Closes: #645873)
+  * cmake.pm: Rollback -DCMAKE_AUTOGEN_VERBOSE=ON temporarily as it
+    trips bhlc due to a bug in cmake.  Thanks to Nicolas
+    Braud-Santoni and "anoteng" for reporting the issue.
+    (Closes: #959493)
 
   [ Translations ]
   * Fix typo in German translation.  (Andreas Bombe)
