dh_clean.1: Rephrase some documentation
Signed-off-by: Niels Thykier <niels@thykier.net>

--- a/debian/changelog
+++ b/debian/changelog
@@ -54,6 +54,9 @@ debhelper (13.0.1) UNRELEASED; urgency=medium
     trips bhlc due to a bug in cmake.  Thanks to Nicolas
     Braud-Santoni and "anoteng" for reporting the issue.
     (Closes: #959493)
+  * dh_clean.1: Rephrase the description of dh_clean to avoid
+    confusion about when it is run.  Thanks to Hugh McMaster for
+    the suggestion.  (Closes: #960110)
 
   [ Translations ]
   * Fix typo in German translation.  (Andreas Bombe)
