dh_missing.1: Document --fail-missing is default in c13
Signed-off-by: Niels Thykier <niels@thykier.net>

--- a/debian/changelog
+++ b/debian/changelog
@@ -57,6 +57,9 @@ debhelper (13.0.1) UNRELEASED; urgency=medium
   * dh_clean.1: Rephrase the description of dh_clean to avoid
     confusion about when it is run.  Thanks to Hugh McMaster for
     the suggestion.  (Closes: #960110)
+  * dh_missing.1: Update documentation to reflect that the
+    --fail-missing option is now the default in compat 13.
+    Thanks to Hugh McMaster for the report.  (Closes: #960110)
 
   [ Translations ]
   * Fix typo in German translation.  (Andreas Bombe)
