--- a/debian/changelog
+++ b/debian/changelog
@@ -31,7 +31,7 @@ debhelper (13.0.1) UNRELEASED; urgency=medium
   * Dh_Lib.pm: Require perl v5.24 (available in Debian oldstable)
     to enable more modern features.
   * Dh_Lib.pm: Fix a bug in variable substition where ${Tab}
-    incorrectly exanded to "\b" rather than "\t".
+    incorrectly expanded to "\b" rather than "\t".
   * dh_installchangelogs.1: Loosely document which file names that
     dh_installchangelogs uses as guesses for finding an upstream
     changelog file.  Thanks to Laurent Bigonville for suggesting
