d/changelog: Fix another typo
Signed-off-by: Niels Thykier <niels@thykier.net>

--- a/debian/changelog
+++ b/debian/changelog
@@ -170,7 +170,7 @@ debhelper (12.9) unstable; urgency=medium
   * dh: Refactor addon loading.  As a side-effect, dh no
     longer leaks as many functions into the scope of addons.
     Addons depending on the previous behaviour may now fail
-    due to calls to undefined subroutintes and will need to
+    due to calls to undefined subroutines and will need to
     be fixed.
   * dh_installinitramfs.1: Correct the name of localized
     versions of dh_installinitramfs so that man can find
