d/changelog: Add newly filed bug number
Signed-off-by: Niels Thykier <niels@thykier.net>

--- a/debian/changelog
+++ b/debian/changelog
@@ -59,7 +59,8 @@ debhelper (13.0.1) UNRELEASED; urgency=medium
     the suggestion.  (Closes: #960110)
   * dh_missing.1: Update documentation to reflect that the
     --fail-missing option is now the default in compat 13.
-    Thanks to Hugh McMaster for the report.  (Closes: #960107)
+    Thanks to Hugh McMaster and Christoph Berg for the report.
+    (Closes: #960107, #960697)
 
   [ Translations ]
   * Fix typo in German translation.  (Andreas Bombe)
