d/changelog: Fix typo
Signed-off-by: Niels Thykier <niels@thykier.net>

--- a/debian/changelog
+++ b/debian/changelog
@@ -26,7 +26,7 @@ debhelper (13.0.1) UNRELEASED; urgency=medium
     addition to DH_AUTOSCRIPTS as a means to find data files.  This
     is mostly useful for testing purposes or to be "self-hosting".
     The new DH_DATAFILES is more general than DH_AUTOSCRIPTS and
-    enable us to add new data file sources without investing new
+    enable us to add new data file sources without inventing new
     environment variables.
   * Dh_Lib.pm: Require perl v5.24 (available in Debian oldstable)
     to enable more modern features.
