dh_missing: Check for possible alternative install paths
Detect missing files being installed from different paths and warning
specifically about this.  This should hopefully reduce the number of
bug reports where people do not understand by dh_missing reports
missing files when they feel it is not missing.

The listed bug is not the first of its kind and is unlikely to be the
last without this change.

Signed-off-by: Niels Thykier <niels@thykier.net>

--- a/debian/changelog
+++ b/debian/changelog
@@ -70,6 +70,9 @@ debhelper (13.0.1) UNRELEASED; urgency=medium
     are inserted into the maintscripts of the package.  Thanks to
     David Engel and Fumitoshi UKAI for the original requests.
     (Closes: #43720)
+  * dh_missing: Attempt to guess if missing files might be caused by
+    the packager installing the same file via a different path and
+    let them know of this. (Closes: #960781)
 
   [ Translations ]
   * Fix typo in German translation.  (Andreas Bombe)
