--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-debhelper (13.0.1) UNRELEASED; urgency=medium
+debhelper (13.1) unstable; urgency=low
 
   [ Niels Thykier ]
   * dh_installinitramfs: Remove misleading "in compat 12" as the
@@ -82,7 +82,7 @@ debhelper (13.0.1) UNRELEASED; urgency=medium
   [ Translations ]
   * Fix typo in German translation.  (Andreas Bombe)
 
- -- Niels Thykier <niels@thykier.net>  Fri, 17 Apr 2020 21:55:48 +0000
+ -- Niels Thykier <niels@thykier.net>  Sun, 17 May 2020 17:07:30 +0000
 
 debhelper (13) unstable; urgency=medium
 
