Document which tools support substitutions

--- a/debhelper.pod
+++ b/debhelper.pod
@@ -104,8 +104,63 @@ easy to read, understand, and modify.
 =head2 Substitutions in debhelper config files
 
 In compatibility level 13 and later, it is possible to use simple
-substitutions in I<some> debhelper config files (particularly,
-the configuration files for L<dh_install(1)>).
+substitutions in debhelper config files for the following tools:
+
+=over 4
+
+=item *
+
+dh_clean
+
+=item *
+
+dh_install
+
+=item *
+
+dh_installcatalogs
+
+=item *
+
+dh_installdeb
+
+=item *
+
+dh_installdirs
+
+=item *
+
+dh_installdocs
+
+=item *
+
+dh_installexamples
+
+=item *
+
+dh_installinfo
+
+=item *
+
+dh_installman
+
+=item *
+
+dh_installwm
+
+=item *
+
+dh_link
+
+=item *
+
+dh_missing
+
+=item *
+
+dh_ucf
+
+=back
 
 All substitution variables are of the form I<${foo}> and the braces
 are mandatory.  Variable names are case-sensitive and consist of
