dh_missing: Note if a MA path is seen as not installed
Signed-off-by: Niels Thykier <niels@thykier.net>

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,12 @@
+debhelper (13.1.1) UNRELEASED; urgency=medium
+
+  * dh_missing: Explicitly remind people that they should not
+    copy-waste multi-arch paths directly into debian/not-installed.
+    Instead, recommend the use of wildcards of ${DEB_HOST_MULTIARCH}
+    to replace the hardcoded value.
+
+ -- Niels Thykier <niels@thykier.net>  Mon, 01 Jun 2020 12:03:12 +0000
+
 debhelper (13.1) unstable; urgency=low
 
   [ Niels Thykier ]
