--- a/debhelper.pod
+++ b/debhelper.pod
@@ -28,8 +28,8 @@ package, which contains a L<dh_make|dh_make(1)> command that partially
 automates the process. For a more gentle introduction, the B<maint-guide> Debian 
 package contains a tutorial about making your first package using debhelper.
 
-Except where tool explicitly denotes otherwise, all of the debhelper
-tools assumes that they run from root directory of an unpacked source
+Except where the tool explicitly denotes otherwise, all of the debhelper
+tools assume that they run from the root directory of an unpacked source
 package.  This is so they can locate find files like F<debian/control>
 when needed.
 
