--- a/debian/changelog
+++ b/debian/changelog
@@ -1,9 +1,13 @@
 debhelper (13.1.1) UNRELEASED; urgency=medium
 
+  [ Niels Thykier ]
   * dh_missing: Explicitly remind people that they should not
     copy-waste multi-arch paths directly into debian/not-installed.
     Instead, recommend the use of wildcards of ${DEB_HOST_MULTIARCH}
     to replace the hardcoded value.
+
+  [ Anel Husakovic ]
+  * debhelper.7: Fix typo/grammatical errors.
 
  -- Niels Thykier <niels@thykier.net>  Mon, 01 Jun 2020 12:03:12 +0000
 
