--- a/debian/changelog
+++ b/debian/changelog
@@ -5,6 +5,8 @@ debhelper (13.1.1) UNRELEASED; urgency=medium
     copy-waste multi-arch paths directly into debian/not-installed.
     Instead, recommend the use of wildcards of ${DEB_HOST_MULTIARCH}
     to replace the hardcoded value.
+  * d/changelog: Clarify that dh_installman change in 13.1 related to
+    #958343.
 
   [ Anel Husakovic ]
   * debhelper.7: Fix typo/grammatical errors.
@@ -21,9 +23,12 @@ debhelper (13.1) unstable; urgency=low
     calls to "update-initramfs -u", which had the same affect).
     (Closes: #822730).
   * dh_installman: Improve error messages and handling of broken
-    section numbers.  Notably ignore (with a warning) sections from
-    manpages that look suspiciously like a version number.  Thanks
-    to Paul Gevers for reporting the bug.  (Closes: #958343)
+    section numbers.  Notably, the auto-detection no longer picks
+    section numbers that look suspiciously like a version number
+    (or a date).  This can cause dh_installman to reject manpages
+    if it can no longer guess a suitable section for the manpage
+    Thanks to Paul Gevers for reporting the bug.
+    (Closes: #958343)
   * Dh_Lib.pm: Support that Architecture (among other fields) can be
     folded in d/control.  Thanks to Thorsten Glaser for reporting
     the issue.  (Closes: #958987)
