Update on Portuguese translation of manpage
Signed-off-by: Niels Thykier <niels@thykier.net>

--- a/debian/changelog
+++ b/debian/changelog
@@ -11,6 +11,9 @@ debhelper (13.1.1) UNRELEASED; urgency=medium
   [ Anel Husakovic ]
   * debhelper.7: Fix typo/grammatical errors.
 
+  [ Translations ]
+  * Update Portuguese translation (Américo Monteiro)  (Closes: #962568)
+
  -- Niels Thykier <niels@thykier.net>  Mon, 01 Jun 2020 12:03:12 +0000
 
 debhelper (13.1) unstable; urgency=low
