--- a/debian/changelog
+++ b/debian/changelog
@@ -20,6 +20,9 @@ debhelper (13.1.1) UNRELEASED; urgency=medium
     set to a much shorter directory avoid issues with socket lengths.
     In all other cases, the XDG_RUNTIME_DIR is now cleared.  Thanks to
     Simon McVittie for the report.  (Closes: #961655)
+  * debhelper.pod: Document that --sourcedir clashes between dh_auto_*
+    and dh_missing (etc.).  Thanks to Thorsten Glaser for reporting
+    the issue.  (See #964230)
 
   [ Anel Husakovic ]
   * debhelper.7: Fix typo/grammatical errors.
