d/changelog: Fix wording of a changelog entry
Signed-off-by: Niels Thykier <niels@thykier.net>

--- a/debian/changelog
+++ b/debian/changelog
@@ -5,8 +5,8 @@ debhelper (13.1.1) UNRELEASED; urgency=medium
     copy-waste multi-arch paths directly into debian/not-installed.
     Instead, recommend the use of wildcards of ${DEB_HOST_MULTIARCH}
     to replace the hardcoded value.
-  * d/changelog: Clarify that dh_installman change in 13.1 related to
-    #958343.
+  * d/changelog: Clarify what dh_installman change in 13.1 related to
+    #958343 was about.
   * Dh_Lib.pm: Add support for raising compat deprecation warnings to
     an error if there are pending removals.  This currently triggers
     for usage of compat 5 and 6.
