--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-debhelper (13.1.1) UNRELEASED; urgency=medium
+debhelper (13.2) unstable; urgency=medium
 
   [ Niels Thykier ]
   * dh_missing: Explicitly remind people that they should not
@@ -30,7 +30,7 @@ debhelper (13.1.1) UNRELEASED; urgency=medium
   [ Translations ]
   * Update Portuguese translation (Américo Monteiro)  (Closes: #962568)
 
- -- Niels Thykier <niels@thykier.net>  Mon, 01 Jun 2020 12:03:12 +0000
+ -- Niels Thykier <niels@thykier.net>  Sun, 05 Jul 2020 21:14:04 +0000
 
 debhelper (13.1) unstable; urgency=low
 
