debhelper.pod: Correct self-reference to dherroron DEB_BUILD_OPTIONS
Signed-off-by: Niels Thykier <niels@thykier.net>

--- a/debhelper.pod
+++ b/debhelper.pod
@@ -1535,8 +1535,7 @@ to be removed compat levels into errors.
 This is useful for automated checking for code relying on deprecated
 compat levels that is scheduled for removal.
 
-This environment variable is intended for testing purposes; not
-production builds.
+This option is intended for testing purposes; not production builds.
 
 =item B<nostrip>
 
