Fix the dh_installalternatives dependents example.
The order of the arguments was reversed.

Signed-off-by: Niels Thykier <niels@thykier.net>

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,11 @@
+debhelper (13.2.1) UNRELEASED; urgency=medium
+
+  [ Peter Pentchev ]
+  * dh_installalternatives: Correct order of values in the example for
+    Dependents links.  (Closes: #966285)
+
+ -- Niels Thykier <niels@thykier.net>  Sun, 26 Jul 2020 17:27:40 +0000
+
 debhelper (13.2) unstable; urgency=medium
 
   [ Niels Thykier ]
