d/changelog: Fix typos
Signed-off-by: Niels Thykier <niels@thykier.net>

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,5 +1,8 @@
 debhelper (13.2.1) UNRELEASED; urgency=medium
 
+  [ Niels Thykier ]
+  * debian/changelog: Fix some typos in previous entries.
+
   [ Peter Pentchev ]
   * dh_installalternatives: Correct order of values in the example for
     Dependents links.  (Closes: #966285)
@@ -75,7 +78,7 @@ debhelper (13.1) unstable; urgency=low
     environment variables.
   * Dh_Lib.pm: Require perl v5.24 (available in Debian oldstable)
     to enable more modern features.
-  * Dh_Lib.pm: Fix a bug in variable substition where ${Tab}
+  * Dh_Lib.pm: Fix a bug in variable substitution where ${Tab}
     incorrectly expanded to "\b" rather than "\t".
   * dh_installchangelogs.1: Loosely document which file names that
     dh_installchangelogs uses as guesses for finding an upstream
@@ -250,7 +253,7 @@ debhelper (12.9) unstable; urgency=medium
 debhelper (12.8) unstable; urgency=medium
 
   [ Niels Thykier ]
-  * Dh_Lib.pm: Simplify internal loggning of which commands
+  * Dh_Lib.pm: Simplify internal logging of which commands
     have been run.  We are no longer interested in whether
     it was an override target or not.
   * dh: Support "execute_before_X" and "execute_after_X"
@@ -728,7 +731,7 @@ debhelper (12.1) unstable; urgency=medium
   * dh_missing: Clarify the documentation about when -X with other
     helpers can may dh_missing ignore paths that are not installed.
     Thanks to Hilko Bengen for reporting the original documentation
-    was unsufficient.  (Closes: #917362)
+    was insufficient.  (Closes: #917362)
   * d/control: Bump Standards-Version to 4.3.0 - no changes required.
 
   [ Baptiste Jammet ]
@@ -825,7 +828,7 @@ debhelper (11.5.1) unstable; urgency=medium
 debhelper (11.5) unstable; urgency=medium
 
   [ Daniele Nicolodi ]
-  * dh_installsystemduser: New helper responsible for istalling package
+  * dh_installsystemduser: New helper responsible for installing package
     maintainer supplied systemd user instance units and to produce
     postinst and postrm maintiner scripts code blocks to appropriately
     enable, mask and disable units when the package is installed,
@@ -1800,7 +1803,7 @@ debhelper (10.9) unstable; urgency=medium
   * dh_shlibdeps: Ditto.
   * d/control: Bump Standards-Versions to 4.1.0:
     - Bump priority of dh-systemd to "optional".
-  * dh_makeshlibs: Avoid gratious warning about a non-existing
+  * dh_makeshlibs: Avoid gratuitous warning about a non-existing
     directory, when the packaging directory does not exist.
     (Closes: #626685)
   * dh_gencontrol: Ensure that dbgsym packages do not inherit the
@@ -2406,7 +2409,7 @@ debhelper (10.2.2) unstable; urgency=medium
   * autoreconf.pm: Apply patch from Helmut Grohne to fix
     autoconf/cross regression from #836988.  The autoreconf
     build-system is now also used directly for "clean" and
-    "build" (while still usin the "make" build-system for the
+    "build" (while still using the "make" build-system for the
     heavy lifting).  (Closes: #839681)
   * dh_installdirs: In compat 11, avoid creating debian/<pkg>
     directories except when required to do so.  This fixes a
@@ -2430,7 +2433,7 @@ debhelper (10.2) unstable; urgency=medium
 
   * Apply patch from Peter Pentchev to fix some typos.
   * Apply patch from Michael Biebl to undo a major
-    regression where all of debhelpers functionality was
+    regression where all of debhelper's functionality was
     missing (introduced in 10.1).  (Closes: #839557)
   * dh_installinit,dh_systemd_start: Introduce a new
     --no-stop-on-upgrade as an alternative to
@@ -2905,7 +2908,7 @@ debhelper (9.20151004) unstable; urgency=medium
     (Closes: #719148)
   * dh_installinit: Quote directory name before using it in
     a regex.
-  * dh_installinit: Create script snippts for tmpfiles.d
+  * dh_installinit: Create script snippets for tmpfiles.d
     files even if the package has no sysvinit script or
     explicit debian/<package>.service file.
     (Closes: #795519)
