dh_missing: Improve message about related files found
Signed-off-by: Niels Thykier <niels@thykier.net>

--- a/debian/changelog
+++ b/debian/changelog
@@ -6,6 +6,8 @@ debhelper (13.2.1) UNRELEASED; urgency=medium
     --reload-all-buildenv-variables is passed.  Thanks to
     Harald Welte and Guillem Jover for reporting and debugging
     the issue.  (Closes: #966689)
+  * dh_missing: Improve message about related files found.  Thanks
+    to Diego Escalante for reporting the issue.  (Closes: #966834)
 
   [ Peter Pentchev ]
   * dh_installalternatives: Correct order of values in the example for
