--- a/debian/changelog
+++ b/debian/changelog
@@ -13,6 +13,10 @@ debhelper (13.2.1) UNRELEASED; urgency=medium
   * dh_installalternatives: Correct order of values in the example for
     Dependents links.  (Closes: #966285)
 
+  [ Chris Lamb ]
+  * dh_missing: Sort order of missing files to make output
+    deterministic.  (Closes: #968187)
+
  -- Niels Thykier <niels@thykier.net>  Sun, 26 Jul 2020 17:27:40 +0000
 
 debhelper (13.2) unstable; urgency=medium
