Update on Portuguese translation of manpage
Signed-off-by: Niels Thykier <niels@thykier.net>

--- a/debian/changelog
+++ b/debian/changelog
@@ -17,6 +17,9 @@ debhelper (13.2.1) UNRELEASED; urgency=medium
   * dh_missing: Sort order of missing files to make output
     deterministic.  (Closes: #968187)
 
+  [ Translations ]
+  * Update Portuguese translation (Américo Monteiro)  (Closes: #964784)
+
  -- Niels Thykier <niels@thykier.net>  Sun, 26 Jul 2020 17:27:40 +0000
 
 debhelper (13.2) unstable; urgency=medium
