PROGRAMMING: Minor improvements/clarifications
Signed-off-by: Niels Thykier <niels@thykier.net>

--- a/debian/changelog
+++ b/debian/changelog
@@ -47,6 +47,8 @@ debhelper (13.2) unstable; urgency=medium
   * debhelper.pod: Document that --sourcedir clashes between dh_auto_*
     and dh_missing (etc.).  Thanks to Thorsten Glaser for reporting
     the issue.  (See #964230)
+  * PROGRAMMING: Minor improvements and clarifications to the API
+    documentation.
 
   [ Anel Husakovic ]
   * debhelper.7: Fix typo/grammatical errors.
