--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-debhelper (13.2.1) UNRELEASED; urgency=medium
+debhelper (13.2.1) unstable; urgency=medium
 
   [ Niels Thykier ]
   * debian/changelog: Fix some typos in previous entries.
@@ -20,7 +20,7 @@ debhelper (13.2.1) UNRELEASED; urgency=medium
   [ Translations ]
   * Update Portuguese translation (Américo Monteiro)  (Closes: #964784)
 
- -- Niels Thykier <niels@thykier.net>  Sun, 26 Jul 2020 17:27:40 +0000
+ -- Niels Thykier <niels@thykier.net>  Sat, 12 Sep 2020 20:27:03 +0000
 
 debhelper (13.2) unstable; urgency=medium
 
