--- a/debhelper.pod
+++ b/debhelper.pod
@@ -1242,6 +1242,10 @@ B<BUILD_RPATH_USE_ORIGIN> at its new default).  This should undo the need for
 B<LD_LIBRARY_PATH> and avoid the reproducibility issues on Linux, where B<$ORIGIN>
 is supported by the runtime linkers.
 
+=item -
+
+The tool B<dh_installsysusers> is now included in the default sequence.
+
 =back
 
 =back
