--- a/debian/changelog
+++ b/debian/changelog
@@ -10,6 +10,9 @@ debhelper (13.2.2) UNRELEASED; urgency=medium
   * dh_gencontrol: Discard the "Protected" field in dbgsym packages.
     Thanks to Axel Beckert for reporting the issue.
     (Closes: #976323)
+  * dh_installsysusers: New tool to install and integrate sysusers
+    into debian packaging.  Thanks to Michael Biebl and Moritz
+    Muehlenhoff for feedback and initial testing.
 
   [ Michael Biebl ]
   * autoscripts/postrm-systemd-reload-only: Run daemon-reload on
