--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+debhelper (13.2.2) UNRELEASED; urgency=medium
+
+  * dh_md5sums: When reading the conffiles file, ignore every line
+    except those starting with a slash "/".
+
+ -- Niels Thykier <niels@thykier.net>  Sat, 19 Sep 2020 07:23:08 +0000
+
 debhelper (13.2.1) unstable; urgency=medium
 
   [ Niels Thykier ]
