systemd: Run daemon-reload on "remove" only
Avoid unnecessary "systemctl daemon-reload" on actions other then
remove.

Closes: debian/debhelper!43

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,5 +1,6 @@
 debhelper (13.2.2) UNRELEASED; urgency=medium
 
+  [ Niels Thykier ]
   * dh_md5sums: When reading the conffiles file, ignore every line
     except those starting with a slash "/".
   * SequencerUtil.pm,dh_testroot: Let dh skip dh_testroot when
@@ -9,6 +10,10 @@ debhelper (13.2.2) UNRELEASED; urgency=medium
   * dh_gencontrol: Discard the "Protected" field in dbgsym packages.
     Thanks to Axel Beckert for reporting the issue.
     (Closes: #976323)
+
+  [ Michael Biebl ]
+  * autoscripts/postrm-systemd-reload-only: Run daemon-reload on
+    "remove" only.
 
  -- Niels Thykier <niels@thykier.net>  Sat, 19 Sep 2020 07:23:08 +0000
 
