dh_gencontrol: Discard Protected field in dbgsyms
Signed-off-by: Niels Thykier <niels@thykier.net>

--- a/debian/changelog
+++ b/debian/changelog
@@ -6,6 +6,9 @@ debhelper (13.2.2) UNRELEASED; urgency=medium
     the builder supports Rules-Requires-Root and it is set to "no".
   * Dh_Lib.pm: Provide a more helpful error message when
     lintian-overrides config files are executable by mistake.
+  * dh_gencontrol: Discard the "Protected" field in dbgsym packages.
+    Thanks to Axel Beckert for reporting the issue.
+    (Closes: #976323)
 
  -- Niels Thykier <niels@thykier.net>  Sat, 19 Sep 2020 07:23:08 +0000
 
