d/control: Remove transitional package dh-systemd
Signed-off-by: Niels Thykier <niels@thykier.net>

--- a/debian/changelog
+++ b/debian/changelog
@@ -13,6 +13,9 @@ debhelper (13.2.2) UNRELEASED; urgency=medium
   * dh_installsysusers: New tool to install and integrate sysusers
     into debian packaging.  Thanks to Michael Biebl and Moritz
     Muehlenhoff for feedback and initial testing.
+  * d/control: Remove transitional package for dh-systemd.  Thanks
+    to Michael Biebl for poking reverse dependencies to migrate and
+    getting us ready to remove it.  (Closes: #871312)
 
   [ Michael Biebl ]
   * autoscripts/postrm-systemd-reload-only: Run daemon-reload on
