--- a/debian/changelog
+++ b/debian/changelog
@@ -13,6 +13,7 @@ debhelper (13.3) UNRELEASED; urgency=medium
   * dh_installsysusers: New tool to install and integrate sysusers
     into debian packaging.  Thanks to Michael Biebl and Moritz
     Muehlenhoff for feedback and initial testing.
+    (Closes: #962384)
   * d/control: Remove transitional package for dh-systemd.  Thanks
     to Michael Biebl for poking reverse dependencies to migrate and
     getting us ready to remove it.  (Closes: #871312)
