--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-debhelper (13.3) UNRELEASED; urgency=medium
+debhelper (13.3) unstable; urgency=medium
 
   [ Niels Thykier ]
   * dh_md5sums: When reading the conffiles file, ignore every line
@@ -34,7 +34,7 @@ debhelper (13.3) UNRELEASED; urgency=medium
   * autoscripts/postrm-systemd-reload-only: Run daemon-reload on
     "remove" only.
 
- -- Niels Thykier <niels@thykier.net>  Sat, 19 Sep 2020 07:23:08 +0000
+ -- Niels Thykier <niels@thykier.net>  Sun, 06 Dec 2020 20:11:53 +0000
 
 debhelper (13.2.1) unstable; urgency=medium
 
