d/changelog: Add entry for dwz bump
Signed-off-by: Niels Thykier <niels@thykier.net>

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,11 @@
+debhelper (13.3.1) UNRELEASED; urgency=medium
+
+  * d/control: Bump dependency on dwz to pull newer version of dwz
+    in buster-backports, which makes backporting easier.  Thanks to
+    Anthony Fok for the patch and for backporting dwz.
+
+ -- Niels Thykier <niels@thykier.net>  Mon, 28 Dec 2020 16:37:28 +0000
+
 debhelper (13.3) unstable; urgency=medium
 
   [ Niels Thykier ]
