--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,11 @@
+debhelper (13.3.2) UNRELEASED; urgency=medium
+
+  * cmake.pm: Correct parameter -DCMAKE_BUILD_RPATH_USE_ORIGIN=ON
+    passed to cmake in compat 14+.  Thanks to Raul Tambre for
+    reporting the issue.  (Closes: #977255)
+
+ -- Niels Thykier <niels@thykier.net>  Sun, 10 Jan 2021 17:00:05 +0000
+
 debhelper (13.3.1) unstable; urgency=medium
 
   * d/control: Bump dependency on dwz to pull newer version of dwz
