Always generate unique doc-base file names (Closes: #980903)
Always use package name and document ID.

With these changes, the zsh package mentioned in #980903 builds these
two doc-base files:

  $ debc | fgrep zsh-faq
  -rw-r--r-- root/root       504 2020-06-30 17:42 ./usr/share/doc-base/zsh-common.zsh-faq
  -rw-r--r-- root/root       519 2020-06-30 17:42 ./usr/share/doc-base/zsh-doc.zsh-faq

Upgrading to these packages from the current package in Debian
Unstable/Testing (5.8-5) causes the doc-base trigger to emit this
output:

  Processing 2 removed doc-base files, 3 added doc-base files...

The files generated by doc-base are:

  $ ls -l /var/lib/doc-base/documents/zsh*
  -rw-r--r-- 1 root root 519 Jan 24 06:54 /var/lib/doc-base/documents/zsh
  -rw-r--r-- 1 root root 613 Jan 24 06:54 /var/lib/doc-base/documents/zsh-faq

And the two zsh-*.zsh-faq files are indeed merged into
/var/lib/doc-base/documents/zsh-faq.

--- a/debian/changelog
+++ b/debian/changelog
@@ -63,6 +63,10 @@ debhelper (13.4) UNRELEASED; urgency=medium
     as it runs under (via Perl's $^X variable) when invoking the
     upstream build system.  (Closes: !40, #966396)
 
+  [ Axel Beckert ]
+  * Always generate unique doc-base file names based on package name and
+    document ID. (Closes: #980903)
+
  -- Niels Thykier <niels@thykier.net>  Sun, 21 Mar 2021 09:38:35 +0000
 
 debhelper (13.3.4) unstable; urgency=medium
