Update of German translation of manpages
Signed-off-by: Niels Thykier <niels@thykier.net>

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,8 +1,12 @@
 debhelper (13.3.2) UNRELEASED; urgency=medium
 
+  [ Niels Thykier ]
   * cmake.pm: Correct parameter -DCMAKE_BUILD_RPATH_USE_ORIGIN=ON
     passed to cmake in compat 14+.  Thanks to Raul Tambre for
     reporting the issue.  (Closes: #977255)
+
+  [ Translations ]
+  * Update German translation (Pfannenstein Erik)  (Closes: #979608)
 
  -- Niels Thykier <niels@thykier.net>  Sun, 10 Jan 2021 17:00:05 +0000
 
