--- a/debhelper.pod
+++ b/debhelper.pod
@@ -1148,11 +1148,11 @@ are identical).
 
 =item -
 
-The B<dh_auto_*> helpers now resets the environment variables B<HOME>
+The B<dh_auto_*> helpers now reset the environment variables B<HOME>
 and common B<XDG_*> variable.  Please see description of the
-environment variables in L</ENVIRONMENT> for how this handled.
+environment variables in L</ENVIRONMENT> for how this is handled.
 
-I<This feature changed between between debhelper 13 and debhelper 13.2.>
+I<This feature changed between debhelper 13 and debhelper 13.2.>
 
 =item -
 
