--- a/debian/changelog
+++ b/debian/changelog
@@ -4,6 +4,11 @@ debhelper (13.3.2) UNRELEASED; urgency=medium
   * cmake.pm: Correct parameter -DCMAKE_BUILD_RPATH_USE_ORIGIN=ON
     passed to cmake in compat 14+.  Thanks to Raul Tambre for
     reporting the issue.  (Closes: #977255)
+  * dh_strip: Fix wording.  Thanks to Chris Leick and Pfannenstein
+    Erik.
+  * debhelper.pod: Fix typos.  Thanks to Chris Leick and
+    Pfannenstein Erik.
+  * dh_makeshlibs: Ditto.
 
   [ Translations ]
   * Update German translation (Pfannenstein Erik)  (Closes: #979608)
