--- a/man/po4a/po/de.po
+++ b/man/po4a/po/de.po
@@ -2579,14 +2579,14 @@ msgstr ""
 # FIXME: s/resets/reset
 # FIXME: last line: missing "is"
 #| msgid ""
-#| "The B<dh_auto_*> helpers now resets the environment variables B<HOME> and "
+#| "The B<dh_auto_*> helpers now reset the environment variables B<HOME> and "
 #| "common B<XDG_*> variable.  B<HOME> and B<XDG_RUNTIME_DIR> are each set to "
 #| "a distinct writable directory. The rest of the environment variables are "
 #| "cleared."
 msgid ""
-"The B<dh_auto_*> helpers now resets the environment variables B<HOME> and "
+"The B<dh_auto_*> helpers now reset the environment variables B<HOME> and "
 "common B<XDG_*> variable.  Please see description of the environment "
-"variables in L</ENVIRONMENT> for how this handled."
+"variables in L</ENVIRONMENT> for how this is handled."
 msgstr ""
 "Die B<dh_auto_*>-Hilfsprogramme setzen nun die Umgebungsvariablen B<HOME> "
 "und gebräuchliche B<XDG_*>-Variablen zurück. Wie damit umgegangen wird, "
@@ -2597,7 +2597,7 @@ msgstr ""
 #FIXME: Double "between"
 #: debhelper.pod:1155
 msgid ""
-"I<This feature changed between between debhelper 13 and debhelper 13.2.>"
+"I<This feature changed between debhelper 13 and debhelper 13.2.>"
 msgstr "I<Dieses Funktionsmerkmal hat sich zwischen Debhelper 13 und Debhelper 13.2 geändert.>"
 
 #. type: textblock
@@ -2777,11 +2777,11 @@ msgstr "Änderungen gegenüber v13 sind:"
 #| "to L<cmake(1)>."
 msgid ""
 "The B<cmake> buildsystem now passes B<-DCMAKE_SKIP_RPATH=ON> and B<-"
-"DBUILD_RPATH_USE_ORIGIN=ON> to L<cmake(1)> to avoid some reproducibility "
+"DCMAKE_BUILD_RPATH_USE_ORIGIN=ON> to L<cmake(1)> to avoid some reproducibility "
 "issues."
 msgstr ""
 "Das B<cmake>-Bausystem übergibt nun B<-DCMAKE_SKIP_RPATH=ON> und B<-"
-"DBUILD_RPATH_USE_ORIGIN=ON> an L<cmake(1)>, um einige Probleme mit der "
+"DCMAKE_BUILD_RPATH_USE_ORIGIN=ON> an L<cmake(1)>, um einige Probleme mit der "
 "Reproduzierbarkeit zu beheben."
 
 #. type: textblock
@@ -10629,7 +10629,7 @@ msgstr ""
 #. type: textblock
 #: dh_makeshlibs:36
 msgid ""
-"If you previously used B<--add-udeb> and is considering to migrate to using "
+"If you previously used B<--add-udeb> and are considering to migrate to using "
 "the new auto-detection feature in 12.3, then please remember to test that "
 "the resulting F<DEBIAN/shlibs> files are as expected.  There are some known "
 "corner cases, where the auto-detection is insufficient.  These include when "
