--- a/man/po4a/po/debhelper.pot
+++ b/man/po4a/po/debhelper.pot
@@ -1944,14 +1944,14 @@ msgstr ""
 #. type: textblock
 #: debhelper.pod:1151
 msgid ""
-"The B<dh_auto_*> helpers now resets the environment variables B<HOME> and "
+"The B<dh_auto_*> helpers now reset the environment variables B<HOME> and "
 "common B<XDG_*> variable.  Please see description of the environment "
-"variables in L</ENVIRONMENT> for how this handled."
+"variables in L</ENVIRONMENT> for how this is handled."
 msgstr ""
 
 #. type: textblock
 #: debhelper.pod:1155
-msgid "I<This feature changed between between debhelper 13 and debhelper 13.2.>"
+msgid "I<This feature changed between debhelper 13 and debhelper 13.2.>"
 msgstr ""
 
 #. type: textblock
@@ -2077,7 +2077,7 @@ msgstr ""
 #: debhelper.pod:1233
 msgid ""
 "The B<cmake> buildsystem now passes B<-DCMAKE_SKIP_RPATH=ON> and "
-"B<-DBUILD_RPATH_USE_ORIGIN=ON> to L<cmake(1)> to avoid some reproducibility "
+"B<-DCMAKE_BUILD_RPATH_USE_ORIGIN=ON> to L<cmake(1)> to avoid some reproducibility "
 "issues."
 msgstr ""
 
@@ -8015,7 +8015,7 @@ msgstr ""
 #. type: textblock
 #: dh_makeshlibs:36
 msgid ""
-"If you previously used B<--add-udeb> and is considering to migrate to using "
+"If you previously used B<--add-udeb> and are considering to migrate to using "
 "the new auto-detection feature in 12.3, then please remember to test that "
 "the resulting F<DEBIAN/shlibs> files are as expected.  There are some known "
 "corner cases, where the auto-detection is insufficient.  These include when "
