--- a/man/po4a/po/pt.po
+++ b/man/po4a/po/pt.po
@@ -2530,9 +2530,9 @@ msgstr ""
 #. type: textblock
 #: debhelper.pod:1151
 msgid ""
-"The B<dh_auto_*> helpers now resets the environment variables B<HOME> and "
+"The B<dh_auto_*> helpers now reset the environment variables B<HOME> and "
 "common B<XDG_*> variable.  Please see description of the environment "
-"variables in L</ENVIRONMENT> for how this handled."
+"variables in L</ENVIRONMENT> for how this is handled."
 msgstr ""
 "Os ajudantes de B<dh_auto_*> agora reiniciam as variáveis de ambiente "
 "B<HOME> e variável comum B<XDG_*>. Por favor veja a descrição das variáveis "
@@ -2541,7 +2541,7 @@ msgstr ""
 #. type: textblock
 #: debhelper.pod:1155
 msgid ""
-"I<This feature changed between between debhelper 13 and debhelper 13.2.>"
+"I<This feature changed between debhelper 13 and debhelper 13.2.>"
 msgstr "I<Esta funcionalidade mudou entre debhelper 13 e debhelper 13.2.>"
 
 #. type: textblock
@@ -2713,11 +2713,11 @@ msgstr "As alterações a partir de v13 são:"
 #: debhelper.pod:1233
 msgid ""
 "The B<cmake> buildsystem now passes B<-DCMAKE_SKIP_RPATH=ON> and B<-"
-"DBUILD_RPATH_USE_ORIGIN=ON> to L<cmake(1)> to avoid some reproducibility "
+"DCMAKE_BUILD_RPATH_USE_ORIGIN=ON> to L<cmake(1)> to avoid some reproducibility "
 "issues."
 msgstr ""
 "O sistema de compilação B<cmake> agora passa B<-DCMAKE_SKIP_RPATH=ON> e B<-"
-"DBUILD_RPATH_USE_ORIGIN=ON> a L<cmake(1)> para evitar alguns problemas de "
+"DCMAKE_BUILD_RPATH_USE_ORIGIN=ON> a L<cmake(1)> para evitar alguns problemas de "
 "reprodutibilidade."
 
 #. type: textblock
@@ -10446,7 +10446,7 @@ msgstr ""
 #. type: textblock
 #: dh_makeshlibs:36
 msgid ""
-"If you previously used B<--add-udeb> and is considering to migrate to using "
+"If you previously used B<--add-udeb> and are considering to migrate to using "
 "the new auto-detection feature in 12.3, then please remember to test that "
 "the resulting F<DEBIAN/shlibs> files are as expected.  There are some known "
 "corner cases, where the auto-detection is insufficient.  These include when "
