de.po: Fix syntax errors
Signed-off-by: Niels Thykier <niels@thykier.net>

--- a/man/po4a/po/de.po
+++ b/man/po4a/po/de.po
@@ -3594,7 +3594,7 @@ msgstr ""
 "I<Dieser Wert ändert den Inhalt der Debs, die gebaut werden. Die .deb-"
 "Pakete, die unter Anwesenheit dieses Werts gebaut werden, werden nicht Bit "
 "für Bit reproduzierbar sein, was bei einem gewöhnlichen Paket der Regelfall "
-"ist."
+"ist.>"
 
 #. type: textblock
 #: debhelper.pod:1550
