--- a/debian/changelog
+++ b/debian/changelog
@@ -9,6 +9,8 @@ debhelper (13.3.2) UNRELEASED; urgency=medium
   * debhelper.pod: Fix typos.  Thanks to Chris Leick and
     Pfannenstein Erik.
   * dh_makeshlibs: Ditto.
+  * debian/control: Bump Standards-Versions to 4.5.1.  No changes
+    required.
 
   [ Translations ]
   * Update German translation (Pfannenstein Erik)  (Closes: #979608)
