Extend dh_installdocs POD on debian/$pkg.doc-base.* wrt. #980903

--- a/debian/changelog
+++ b/debian/changelog
@@ -12,6 +12,11 @@ debhelper (13.3.2) UNRELEASED; urgency=medium
   * debian/control: Bump Standards-Versions to 4.5.1.  No changes
     required.
 
+  [ Axel Beckert ]
+  * Extend dh_installdocs documentation on debian/$pkg.doc-base.* with
+    regards to when deduplication does not work and may cause
+    uninstallable packages. (Mitigates: #980903)
+
   [ Translations ]
   * Update German translation (Pfannenstein Erik)  (Closes: #979608)
 
